fixed spacing for next/prev div

--- a/assets/themes/mark-reid/css/screen.css
+++ b/assets/themes/mark-reid/css/screen.css
@@ -520,6 +520,7 @@ img.maruku-png { }
 /* .prev-next */
 .prev-next {
 	position:relative;
+	padding-top: 1em;
 }
 .prev-next .next{ 
 	float:right;
